--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,7 @@ before_install:
   - sudo apt-get install -y python-catkin-pkg python-rosdep python-wstool ros-$ROS_DISTRO-ros-base
   - sudo apt-get install -y ros-$ROS_DISTRO-gazebo-ros-pkgs ros-$ROS_DISTRO-gazebo-ros-control
   - sudo apt-get install -y ros-$ROS_DISTRO-xacro
+  - sudo apt install ros-$ROS_DISTRO-moveit
   - source /opt/ros/$ROS_DISTRO/setup.bash
   # Prepare rosdep to install dependencies.
   - sudo rosdep init
